test/server/multi_schedd_scripts/iptables
# Generated by iptables-save v1.4.7 on Tue Mar 21 10:06:36 2017
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p icmp -m comment --comment "000 accept all icmp" -j ACCEPT 
-A INPUT -i lo -m comment --comment "001 accept all to lo interface" -j ACCEPT 
-A INPUT -m comment --comment "002 allow related/established rules" -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p udp -m multiport --sports 53 -m comment --comment "003 allow dns" -j ACCEPT 
-A INPUT -s 131.225.0.0/16 -p tcp -m multiport --dports 9615 -m comment --comment "300 user pool shared port tcp" -j ACCEPT 
-A INPUT -s 131.225.0.0/16 -p udp -m multiport --dports 9615 -m comment --comment "300 user pool shared port udp" -j ACCEPT 
-A INPUT -s 131.225.0.0/16 -p tcp -m multiport --dports 9618 -m comment --comment "300 user pool collector 9618 tcp" -j ACCEPT 
-A INPUT -s 131.225.0.0/16 -p udp -m multiport --dports 9618 -m comment --comment "300 user pool collector udp" -j ACCEPT 
-A INPUT -s 131.225.0.0/16 -p tcp -m multiport --dports 9620:9660 -m comment --comment "301 user pool collector tcp" -j ACCEPT 
-A INPUT -s 131.225.0.0/16 -p udp -m multiport --dports 9620:9660 -m comment --comment "301 user pool collector udp" -j ACCEPT 
-A INPUT -s 131.225.0.0/16  -p tcp -m multiport --dports 51450 -m comment --comment "302 user pool HAD tcp 51450" -j ACCEPT 
-A INPUT -s 131.225.0.0/16  -p udp -m multiport --dports 51450 -m comment --comment "302 user pool HAD udp 51450" -j ACCEPT 
-A INPUT -s 131.225.0.0/16  -p tcp -m multiport --dports 41450 -m comment --comment "302 user pool Replication tcp 41450" -j ACCEPT 
-A INPUT -s 131.225.0.0/16  -p udp -m multiport --dports 41450 -m comment --comment "302 user pool Replication udp 41450" -j ACCEPT 
-A INPUT -s 131.225.0.0/16 -p tcp -m multiport --dports 1025:65535 -m comment --comment "997 high ports tcp 131.225.0.0/16" -j ACCEPT 
-A INPUT -s 198.124.68.0/23 -p tcp -m multiport --dports 1025:65535 -m comment --comment "997 high ports tcp 198.124.68.0/23" -j ACCEPT 
-A INPUT -s 198.124.70.0/26 -p tcp -m multiport --dports 1025:65535 -m comment --comment "997 high ports tcp 198.124.70.0/26" -j ACCEPT 
-A INPUT -s 131.225.0.0/16 -p udp -m multiport --dports 1025:65535 -m comment --comment "997 high ports udp 131.225.0.0/16" -j ACCEPT 
-A INPUT -s 198.124.68.0/23 -p udp -m multiport --dports 1025:65535 -m comment --comment "997 high ports udp 198.124.68.0/23" -j ACCEPT 
-A INPUT -s 198.124.70.0/26 -p udp -m multiport --dports 1025:65535 -m comment --comment "997 high ports udp 198.124.70.0/26" -j ACCEPT 
-A INPUT -s 131.225.0.0/16 -p tcp -m multiport --dports 1:1024 -m comment --comment "998 low ports 131.225.0.0/16" -j ACCEPT 
-A INPUT -s 198.124.68.0/23 -p tcp -m multiport --dports 1:1024 -m comment --comment "998 low ports 198.124.68.0/23" -j ACCEPT 
-A INPUT -s 198.124.70.0/26 -p tcp -m multiport --dports 1:1024 -m comment --comment "998 low ports 198.124.70.0/26" -j ACCEPT 
-A INPUT -s 131.225.0.0/16 -p udp -m multiport --dports 1:1024 -m comment --comment "998 low ports udp 131.225.0.0/16" -j ACCEPT 
-A INPUT -s 198.124.68.0/23 -p udp -m multiport --dports 1:1024 -m comment --comment "998 low ports udp 198.124.68.0/23" -j ACCEPT 
-A INPUT -s 198.124.70.0/26 -p udp -m multiport --dports 1:1024 -m comment --comment "998 low ports udp 198.124.70.0/26" -j ACCEPT 
-A INPUT -p tcp -m comment --comment "999 drop tcp" -j REJECT --reject-with icmp-port-unreachable 
-A INPUT -p udp -m comment --comment "999 drop udp" -j REJECT --reject-with icmp-port-unreachable 
COMMIT
# Completed on Tue Mar 21 10:06:36 2017
